--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
   <script>
  function exemple1() {
     var map = L.map('map').setView([48.864891,2.389828], 15);
+	 
+    var bornes = [0,5,10,15,30,10000];
+    var key = 'Duree_pieds';
+
+    filtrage(data,key);
+
+    decoupe(filtre_num,'Duree_pieds', bornes);
+	 
+	 
     let dataGeo6 = data.map( adresse => {
     let properties = {
    "lng": adresse.lng,
