--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     var bornes = [0,5,10,15,30,10000];
     var key = 'Duree_pieds';
 
-    filtrage(data,key);
+    filtrage(data_b,key);
 
     decoupe(filtre_num,'Duree_pieds', bornes);
-	 
+     
 	 
     let dataGeo6 = data.map( adresse => {
     let properties = {
