--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     var map = L.map('map').setView([48.864891,2.389828], 15);
 	 
     var bornes = [0,5,10,15,30,10000];
-    var key = 'Duree_pieds';
+    var key = 'duree_pieds';
 
     filtrage(data_b,key);
 
