--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     //console.log(Res_Max);
     //console.log(Res_Min);
     var PS = tableau_sortie;
+    console.log(PS.length);
     // [dataGeo6,dataGeo2,dataGeo3,dataGeo4,dataGeo5];
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 18,
