--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
     };
     return properties;
     });
+	 
+    console.log(PS.length);
+    PS.forEach(function(element){
+    console.log(element[0]);
+    });
     //var Res_Max = Math.max.apply(null,data.map(function(o){return o.duree_pied;}));
     //var Res_Min = Math.min.apply(null,data.map(function(o){return o.duree_pied;}));
     //console.log(data.length);
