--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	 
     console.log(PS.length);
     PS.forEach(function(element){
-    console.log(element[0]);
+    console.log(element.length);
     });
     //var Res_Max = Math.max.apply(null,data.map(function(o){return o.duree_pied;}));
     //var Res_Min = Math.min.apply(null,data.map(function(o){return o.duree_pied;}));
