--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
     return properties;
     });
 	 
-    console.log(PS.length);
-    PS.forEach(function(element){
-    console.log(element.length);
-    });
+    console.log(PS[0].length);
+    console.log(PS[1].length);
+   
     //var Res_Max = Math.max.apply(null,data.map(function(o){return o.duree_pied;}));
     //var Res_Min = Math.min.apply(null,data.map(function(o){return o.duree_pied;}));
     //console.log(data.length);
