--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
     filtrage_num(data_b,key);
 
     decoupe(filtre_num,'Duree_pieds', bornes);
-    console.log(tableau_sortie[0].length);
-    console.log(tableau_sortie[1].length);
+    console.log(tableau_sortie.length);
 	 
     var PS = tableau_sortie.map( adresse => {
     let properties = {
