--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     filtrage_num(data_b,key);
 
-    decoupe(filtre_num,'Duree_pieds', bornes);
+    decoupe(filtre_num,'duree_pieds', bornes);
     
     for (let i = 0; i < tableau_sortie.length; i++)
 {
