--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     //};
     //return properties;
     //});
-	 
+
+    var PS = tableau_sortie;
     console.log(PS[0].length);
     console.log(PS[1].length);
    
@@ -93,7 +94,7 @@
     //console.log(data.map(function(o){return o.duree_pied;})[data.length - 1]);
     //console.log(Res_Max);
     //console.log(Res_Min);
-    // var PS = tableau_sortie;
+    
     console.log(PS.length);
     // [dataGeo6,dataGeo2,dataGeo3,dataGeo4,dataGeo5];
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
