--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     var bornes = [0,5,10,15,30,10000];
     var key = 'duree_pieds';
 
-    filtrage_num(data_b,key);
+    filtrage_num(data,key);
 
     decoupe(filtre_num,'duree_pieds', bornes);
     
