--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   var geojsonLayer = L.geoJson(geojsonFeature, { style: function(feature) {
         switch (feature.properties.c_nat_qpv) {
             case 'NQPV': return {color: "black","weight": 1};
-            default:   return {color: "grey","weight": 0.5};
+            default:   return {color: "gray","weight": 0.5};
 	}
         }
 	}
