--- a/index.html
+++ b/index.html
@@ -38,17 +38,19 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-<p> - 902 adresses extraites de Noe <br>
+<p> - extraction de 902 adresses de Noe <br>
     - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
-    - récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
-    à la 20ème Chaise par Google Map API <br>
-    - utilisation des ressources Open Street Map <br>
-    - détermination des enveloppes convexes(-concaves) par algorithme externe
- 
+    - on va étudier :  <br>
+	- la localisation des adresses par rapport aux quartiers prioritaires de la ville,  <br>
+	aux quartiers de veille active et aux anciens quartiers de veille;  <br>
+	- la répartition des adresses selon le temps de trajet à la 20ème Chaise.
 </p>
 <!-- Exemple 1 -->
 <h3><a name="ex1" class="anchor" ><span class="octicon octicon-link"></span>Temps de trajet à pied</a></h3>
-
+<p> - récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
+    à la 20ème Chaise par Google Map API <br>
+    - détermination des enveloppes convexes(-concaves) par algorithme externe
+</p>
 <p>
   <div id="map" style="width: 840px; height: 560px"></div>
   <script>
