--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	 
     PS.forEach(function(element){
     element.forEach(function(latlng) {
-        L.circleMarker(latlng, {radius: 2, color : 'blue']}).addTo(map_1);
+        L.circleMarker(latlng, {radius: 2, color : 'blue'}).addTo(map_1);
     });
     
     });
