--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  function exemple1() {
     var map_1 = L.map('map').setView([48.864891,2.389828], 15);
     var tableau_sortie = data;
-    
+    console.log(tableau_sortie.length);
     tableau_sortie.forEach(function(element){
     element.map( adresse => {
     let properties = {
