--- a/index.html
+++ b/index.html
@@ -59,16 +59,13 @@
     var map_1 = L.map('map').setView([48.864891,2.389828], 15);
     var tableau_sortie = data;
     console.log(tableau_sortie.length);
-    tableau_sortie.forEach(function(element){
-    element.map( adresse => {
+    tableau_sortie.map( adresse => {
     let properties = {
    "lng": adresse.lng,
    "lat": adresse.lat
     };
     return properties;
     });
-    });
-    
 	 
     var PS = tableau_sortie;
    
