--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  function exemple1() {
     var map_1 = L.map('map').setView([48.864891,2.389828], 15);
     var tableau_sortie = data;
-    console.log(tableau_sortie.length);
+  
     tableau_sortie.map( adresse => {
     let properties = {
    "lng": adresse.lng,
@@ -78,9 +78,9 @@
     }).addTo(map_1);
 	 
     PS.forEach(
-    element.forEach(function(latlng) {
+    function(latlng) {
         L.circleMarker(latlng, {radius: 2, color : 'blue'}).addTo(map_1);
-    }));
+    });
     
 	 
    
