--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </p>
 
 <p>
-  <div id="map" style="width: 840px; height: 560px"></div>
+  <div id="map_1" style="width: 840px; height: 560px"></div>
   <script>
  function exemple1() {
     var map_1 = L.map('map').setView([48.864891,2.389828], 15);
@@ -131,7 +131,7 @@ var ptsWithin = turf.pointsWithinPolygon(points_test, searchWithin);
 	      
 	      
 <p>
-  <div id="map" style="width: 840px; height: 560px"></div>
+  <div id="map_2" style="width: 840px; height: 560px"></div>
   <script>
  function exemple2() {
     var map_2 = L.map('map').setView([48.864891,2.389828], 15);
