--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
    
   var geojsonLayer = L.geoJson(geojsonFeature, { style: function(feature) {
         switch (feature.properties.c_nat_qpv) {
-            case 'NQPV': return {color: "black","weight": 1.0};
-            default:   return {color: "brown","weight": 1.0};
+		case 'NQPV': return {color: "black","weight": 1.0, "opacity" : 0.7};
+            default:   return {color: "brown","weight": 1.0, "opacity" : 0.7};
 	}
         }
 	}
@@ -131,10 +131,10 @@ var ptsWithin = turf.pointsWithinPolygon(points_test, searchWithin);
 	      
 	      
 <p>
-  <div id="map" style="width: 840px; height: 560px"></div>
+  <div id="map_2" style="width: 840px; height: 560px"></div>
   <script>
  function exemple2() {
-    var map_2 = L.map('map').setView([48.864891,2.389828], 15);
+    var map_2 = L.map('map_2').setView([48.864891,2.389828], 15);
 	 
     var bornes = [0,5,10,15,30,10000];
     var key = 'duree_pieds';
