--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 geojsonLayer.eachLayer(function (layer) {
 // layer.bindPopup('<h1>'+feature.properties.f1+'</h1><p>name: '+feature.properties.f2+'</p>')
-    layer.bindPopup('<h1>'+layer.properties.l_nqpv + '</h1>');
+    layer.bindPopup('<h1>'+layer.feature.properties.l_nqpv + '</h1>');
   });
   
 	 
