--- a/index.html
+++ b/index.html
@@ -98,7 +98,14 @@
 geojsonLayer.eachLayer(function (layer) {
 // layer.bindPopup('<h1>'+feature.properties.f1+'</h1><p>name: '+feature.properties.f2+'</p>')
     layer.bindPopup('<h1>'+layer.feature.properties.l_nqpv + '</h1>');
+layer.on('mouseover', function (e) {
+            this.openPopup();
+        });
+        layer.on('mouseout', function (e) {
+            this.closePopup();
+        });
   });
+
   
 	 
   var points_test = turf.points([
