--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 geojsonLayer.eachLayer(function (layer) {
 // layer.bindPopup('<h1>'+feature.properties.f1+'</h1><p>name: '+feature.properties.f2+'</p>')
-    layer.bindPopup('<h3>'+layer.feature.properties.c_nat_qpv + ' - ' + layer.feature.properties.l_nqpv + '</h3>');
+    layer.bindPopup('<h3>'+layer.feature.properties.c_nat_qpv + ' : ' + layer.feature.properties.l_nqpv + '</h3>');
 layer.on('mouseover', function (e) {
             this.openPopup();
         });
