--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@ layer.on('mouseover', function (e) {
         });
   });
 
+	 
+
+
   
 	 
   var points_test = turf.points([
@@ -115,6 +118,22 @@ layer.on('mouseover', function (e) {
     [-46.663, -23.554],
     [-46.643, -23.557]
 ]);
+
+var points_test = turf.points([[2.389885,48.865172],[2.388744,48.864032],[2.401432,48.869688]]);
+
+ geojsonLayer.eachLayer(function(layer) {
+  	var inside = 
+      turf.booleanPointInPolygon(
+        points_test.toGeoJSON(), 
+        layer.toGeoJSON()
+      )
+    ;
+    if (inside) {
+    	console.log('oui');
+    
+    }
+  
+  });	 
 
 var searchWithin = turf.polygon([[
     [-46.653,-23.543],
