--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@ layer.on('mouseover', function (e) {
     [-46.643, -23.557]
 ]);
 
-var point_test = turf.point([2.389885,48.865172],
+var point_test = turf.point([[2.389885,48.865172],
     [-46.6246, -23.5325],
     [-46.6062, -23.5513],
     [-46.663, -23.554],
-    [-46.643, -23.557]
+    [-46.643, -23.557]]
 ]);
 
 point_test.ForEach(function(element)
