--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ layer.on('mouseover', function (e) {
     [-46.643, -23.557]
 ]);
 
-var point_test = turf.point([[2.389885,48.865172],
+var point_test = turf.points([[2.389885,48.865172],
     [-46.6246, -23.5325],
     [-46.6062, -23.5513],
     [-46.663, -23.554],
