--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ layer.on('mouseover', function (e) {
 ];
 
 
-points_test.ForEach(function(element)
+points_test.forEach(function(element)
     {
 	geojsonLayer.eachLayer(function(layer) {
   	var inside = 
