--- a/index.html
+++ b/index.html
@@ -106,13 +106,15 @@ layer.on('mouseover', function (e) {
         });
   }); 
 	 
-  var points_test = turf.points[
+
+var points_test = turf.points([
     [-46.6318, -23.5523],
     [-46.6246, -23.5325],
     [-46.6062, -23.5513],
     [-46.663, -23.554],
     [-46.643, -23.557]
 ]);
+
 
 
 points_test.forEach(function(element)
