--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ var points_test = turf.points([
 
 
 
-points_test([points.coordinates]).forEach(function(element)
+points_test.coordinates.forEach(function(element)
     {
 	geojsonLayer.eachLayer(function(layer) {
   	var inside = 
