--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ var points_test = turf.points([
     [-46.663, -23.554],
     [-46.643, -23.557]
 ]);
-
+console.log(points_test.length);
 var toto = turf.getCoords(points_test);
 console.log(toto.length);
 
