--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ layer.on('mouseover', function (e) {
   }); 
 	 
 
-var points_test = [[2.389885,48.865172],
-[2.389885,48.865172],[2.388744,48.864032],[2.401432,48.869688]];
+var points_test = [{2.389885,48.865172},
+		   {2.389885,48.865172}];
 
 points_test.forEach(function(element)
     {
