--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ points_test.forEach(function(element)
         element, 
        geojsonLayer.toGeoJSON()
       );
-    	console.log(inside);
+    	console.log(inside.features.length);
 		
 });
 
