--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ layer.on('mouseover', function (e) {
 	
 	 
 
-markers_adresses.eachLayer(function(element)
+layer_adresses.eachLayer(function(element)
     {
   	var inside = 
       turf.pointsWithinPolygon(
