--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ layer.on('mouseover', function (e) {
 // layer_adresses.eachLayer(function(element)
   	var inside = 
       turf.pointsWithinPolygon(
-        markers_adresses.toGeoJSON(), 
+        layer_adresses.toGeoJSON(), 
        geojsonLayer.toGeoJSON()
       );
     	console.log(turf.getCoord(inside));
